Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.127 2003-11-11 00:23:44 dheltzel Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.8 -Polaris-
<http://tikiwiki.org/ReleaseProcess18>

* [MOD] submissions can now be edited by the creator, even if they do not
  have the p_edit_submission permission.
* [FIX] Fixed bug that caused all subscriptions to a newsletter to be deleted
  if a new address was added.
* [FIX] lots of tempfile naming fixes
* [FIX] Avatars in articles now show correctly
- (rc1) ------------------------------------------------------------
* [MOD] tiki-install.php now tries to create the dirs it needs. Less need to run
  setup.sh
* [NEW] Installation profiles allow for a pre-configured site at install time.
* [MOD] added a simple cache system for topic_image.php with optionnal 
  reload=1 as argument for forcing cache reload (performance gain in articles)
* [NEW] Customizable article types. Default types are Articles, Reviews, Events,
  and Classifieds
* [MOD] some module info removed from tiki_user_assigned_modules, now it comes
  from tiki_modules, as you would expect.
* [MOD] added an anchor jump to comments on comments and attachment links
* [NEW] Plugin to include information from an article.
* [MOD] Improved thread display of comments
* [NEW] newsletter enhancements - per newsletter determine whether users can